[package]
name = "rustc-host"
version = "0.1.4"
authors = ["Dmitrii Demenev <demenev.dmitriy1@gmail.com>"]
edition = "2021"
rust-version = "1.56.1" # https://github.com/foresterre/cargo-msrv/issues/244
description = "Get host target triplet of rustc."
documentation = "https://docs.rs/rustc-host"
readme = "README.md"
repository = "https://github.com/JohnScience/rustc-host"
license = "MIT OR Apache-2.0"
# license-file | not needed
keywords = ["rustc", "version", "host", "target", "triple"]
categories = ["development-tools::build-utils"] # https://crates.io/category_slugs
# workspace | not needed
# build | not needed
# links | not needed
# exclude | not needed
autobins = false
autoexamples = false
autotests = false
autobenches = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.38"

[[bin]]
name = "rustc-host"
doc = false
